Two pages show problem fixes, cancel refresh blockchain error, home page 'ticket' jump error

--- a/app/style/SendPage.less
+++ b/app/style/SendPage.less
@@ -317,9 +317,9 @@
 }
 
 .total-amount-send-amount {
-  .inline-block-mixin;
-
-  width: 100px;
+  .inline-block-mixin; 
+  width: fit-content;
+  min-width: fit-content;
   font-family: @font-family-JuraBold;
 }
 
