--- a/app/style/TxHistory.less
+++ b/app/style/TxHistory.less
@@ -72,6 +72,7 @@
 
 .tx-history-row.Transfer .icon {
   background-image: @wallet-white-icon;
+  background-color: #8839d1
 }
 
 .tx-history-row.Ticket .icon {
